<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.veolus.auditoria.FirmaActivity">
    <RelativeLayout
        android:id="@+id/signature_pad_container"
        android:layout_width="fill_parent"
        android:layout_height="421dp"
        android:layout_above="@+id/buttons_container"
        android:layout_marginBottom="50dp">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signature_pad_description"
            android:layout_marginBottom="9dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/signature_pad_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/agreement"
            android:textColor="@android:color/darker_gray" />

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/signature_pad"
            android:layout_width="fill_parent"
            android:layout_height="427dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signature_pad_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-80dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*Resumen"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onResumenClicked"
            android:src="@android:drawable/ic_menu_info_details"
            tools:ignore="OnClick" />
    </LinearLayout>

    <EditText
        android:id="@+id/firmante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signature_pad_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:hint="Nombre"
        android:maxLength="30"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/clear_pad" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/save_signature" />
    </LinearLayout>
</RelativeLayout>