<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_collapseParallaxMultiplier="1.0">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="547dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <ImageView
            android:layout_width="316dp"
            android:layout_height="186dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/audito" />


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user"
                android:hint="@string/prompt_email"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_candado"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/blueVeolus"
            android:backgroundTint="#AACE3D"
            android:text="@string/action_sign_in"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="right"
            android:paddingTop="20dp"
            android:text="Ver.2.0"
            android:textColor="@color/whiteText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/verscode"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>